TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "129594369001408" [label="Start"];
  "129594369001408" -> "129594369002656";
  "129594369002656" [label="Code"];
  "129594369002656" -> "129594368999584";
  "129594368999584" [label="Function"];
  "129594368999584" -> "129594369002080";
  "129594368999584" -> "129594369000256";
  "129594368999584" -> "129594369002176";
  "129594369002080" [label="main IDENTIFIER"];
  "129594369000256" [label="Parameters"];
  "129594369002176" [label="Code"];
  "129594369002176" -> "129594369008032";
  "129594369002176" -> "129594369008128";
  "129594369002176" -> "129594369008464";
  "129594369008032" [label="Code"];
  "129594369008032" -> "129594369008416";
  "129594369008416" [label="Declaration"];
  "129594369008416" -> "129594369008512";
  "129594369008416" -> "129594369008560";
  "129594369008512" [label="x IDENTIFIER"];
  "129594369008560" [label="1 INT"];
  "129594369008128" [label="Code"];
  "129594369008128" -> "129594369008608";
  "129594369008608" [label="Declaration"];
  "129594369008608" -> "129594369009088";
  "129594369008608" -> "129594369009184";
  "129594369009088" [label="x IDENTIFIER"];
  "129594369009184" [label="2 INT"];
  "129594369008464" [label="Return"];
  "129594369008464" -> "129594369009232";
  "129594369009232" [label="0 INT"];
}
